Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0 RC
-
None
-
9d19d7e6e (6.7), 4fccb4b59 (dev), 54abc984d (6.7.0)
Description
In 6.7rc either the default for handling scoped enums changed, or there's something broken. There's no way to restore the old behaviour with
Q_CLASSINFO("RegisterEnumClassesUnscoped", "true")
Hopefully this is not changed in other point releases (6.5.x, 6.6.x), because it massively breaks compatibility and would force us to adjust 350+ enums here. Additionally this breaks only at runtime in QML and there's no runtime or compile warning at all.
Attachments
Issue Links
- resulted from
-
QTBUG-116057 Enums annotated as scoped-only match unscoped with QML_SINGLETON
-
- Closed
-